--- a/index.html
+++ b/index.html
@@ -2,9 +2,57 @@
 <html>
   <head>
     <title>Calculator</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="container">
     <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+    <div class="calc-form">
+      <form id="calculator">
+        <div class="form-group">
+          <label for="input1">First number:</label>
+          <input id="input1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="input2">Second number:</label>
+          <input id="input2" class="form-control" type="text">
+        </div>
+        <div class="radio">
+          <label>
+              <input type="radio" name="operator" value="add" checked>
+              add
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+                <input type="radio" name="operator" value="subtract">
+                subtract
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                  <input type="radio" name="operator" value="multiply">
+                  multiply
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                    <input type="radio" name="operator" value="divide">
+                    divide
+                  </label>
+                </div>
+                <button type="submit" class="btn-primary">Go!</button>
+      </form>
+      <div id="output">
+
+      </div>
+    </div>
+  </div>
   </body>
 </html>
