add reset button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                   </label>
                 </div>
                 <button type="submit" class="btn-primary">Go!</button>
+                <button type="reset" class="btn-danger">Reset</button>
       </form>
       <div id="output">
 
